appId: com.tuvotodecide
---
- launchApp:
    clearState: false
- tapOn: Open debugger to view warnings.
- assertNotVisible: Open debugger to view warnings.
- tapOn: Tengo una cuenta
- pressKey: 'back'
- assertNotVisible:
    id: keyboard_holder
- tapOn: Olvidé mi cuenta
- tapOn: 󰐲, Recuperar con QR
- tapOn: 󰡼

- tapOn: Se tomó Foto a la(s) 21 ago 2025, 2:06:34 a. m.
- tapOn: Se tomó Foto a la(s) 21 ago 2025, 2:06:34 a. m.
- tapOn: Continuar
- inputText: '1234'
- tapOn: Continuar
- inputText: '1234'
- tapOn: Confirmar PIN
- inputText: '1234'

- assertVisible: , Participar, Sube actas electorales o participa como testigo en el proceso de verificación ciudadana