appId: com.tuvotodecide
---
# Test: Acceso a participación electoral
- launchApp:
    clearState: false
- tapOn: "Open debugger to view warnings."
- assertNotVisible: "Open debugger to view warnings."
# Verificar si necesita login y proporcionar PIN
- inputText: "1234"
- tapOn: "Continuar"
- assertVisible: "Bienvenido"
- tapOn: "Participar"
- assertVisible: "Participación Electoral"
- assertVisible: "Subir actas electorales"
- assertVisible: "Atestiguar actas"
- tapOn: "Subir actas electorales"
- assertVisible: "Buscar mesa"
